[gd_scene load_steps=8 format=3 uid="uid://dl5rej34rbwg5"]

[ext_resource type="Texture2D" uid="uid://dygyssbplgiaa" path="res://Assets/Sprites/Enemies/Bunbun_dead.png" id="1_3kxmx"]
[ext_resource type="Script" path="res://Scripts/Enemies/bun_bun.gd" id="1_pwqcf"]
[ext_resource type="Texture2D" uid="uid://cxmm5thor8yv2" path="res://Assets/Sprites/Enemies/Bunbun_fly1.png" id="2_vews0"]
[ext_resource type="Texture2D" uid="uid://dlg1e5byst1xh" path="res://Assets/Sprites/Enemies/Bunbun_fly2.png" id="3_jln3i"]
[ext_resource type="AudioStream" uid="uid://dknrx7swi25xl" path="res://Assets/SFX/enemykilled.wav" id="4_jqbn4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_27lvl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3kxmx")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_vews0")
}, {
"duration": 1.0,
"texture": ExtResource("3_jln3i")
}],
"loop": true,
"name": &"fly",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_taeud"]
size = Vector2(15.8037, 11.934)

[node name="BunBun" type="Area2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("1_pwqcf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_27lvl")
animation = &"fly"
autoplay = "fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_taeud")

[node name="Enemykilled" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jqbn4")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(1.54273, 0.646047)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(-33.7031, 42.9658)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
